--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,14 +9,14 @@ header {
 	text-align: center;
 	margin-bottom: 20px;
 }
-body{
-	margin: 0;
-	padding: 0;
-	background: #ffffff;
-	border-color: #dddddd;
-	font-size: 18px;
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	background-image: url("assets/images/wov/wov.png");
+.headername {
+	float: left;
+}
+.navigation ul li { 
+    float: right;
+    list-style: none;
+    padding:0; margin:0;
+    color: black;
 }
 h1{
 	background-color: #4aaaa5
@@ -27,11 +27,34 @@ h2{
 h3{
 	color: #4aaaa5;
 }
-.sidebar {
+body{
+	margin: 0;
+	padding: 0;
+	background: #ffffff;
+	border-color: #dddddd;
+	font-size: 18px;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	background-image: url("assets/images/wov/wov.png");
+}
+.container {
+	width: 960px;
+}
+.main-bio {
 	float: left;
 }
-
-footer {
+.portfolio {
+	float: left;
+}
+.contactform {
+	float: left;
+}
+.sidebar {
+	float: right;
+	width: 270px;
+}
+.footer {
 	background-color: #666666;
 	padding: 30px;
+	position: bottom;
+	clear: both;
 }
