--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,17 +9,31 @@ header {
 	text-align: center;
 	margin-bottom: 20px;
 }
-.headername {
+
+.navigation ul li { 
+    list-style: none;
+   display: inline-block; 
+   width:200px; 
+   height:100px; 
+   border:1px solid; 
+   vertical-align:top; 
+   margin-bottom:5px;
+    padding:0; margin:0;
+    color: #999fb2;
+}
+#left {
 	float: left;
 }
-.navigation ul li { 
-    float: right;
-    list-style: none;
-    padding:0; margin:0;
-    color: black;
+#center {
+	float: center;
+}
+#right {
+	float: right;
 }
 h1{
-	background-color: #4aaaa5
+	color: #ffffff;
+	background-color: #4aaaa5;
+	float: left;
 }
 h2{
 	color: #4aaaa5;
@@ -27,34 +41,53 @@ h2{
 h3{
 	color: #4aaaa5;
 }
+.clearfix {
+    overflow: auto;
+}
 body{
+	color: #777777;
+	background-image: url("assets/images/vow/vow.png");
 	margin: 0;
 	padding: 0;
-	background: #ffffff;
 	border-color: #dddddd;
+	background-color: #ffffff;
 	font-size: 18px;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	background-image: url("assets/images/wov/wov.png");
+}
+#self {
+	float: left;
+	clear: right;
+	padding: 10px;
 }
 .container {
 	width: 960px;
 }
 .main-bio {
 	float: left;
+    padding: 10px;
 }
 .portfolio {
 	float: left;
+	width: 620px;
+	padding: 10px;
+}
+#portfolioimg {
+	padding: 15px;
 }
 .contactform {
-	float: left;
+	float: left; 
+	padding: 10px;
 }
+
 .sidebar {
 	float: right;
 	width: 270px;
 }
 .footer {
 	background-color: #666666;
+	border-top: 30px; border-color: #4aaaa5;
 	padding: 30px;
 	position: bottom;
 	clear: both;
+	color: #777777;
 }
