--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,26 +9,38 @@ header {
 	text-align: center;
 	margin-bottom: 20px;
 }
-
+.rightnav {
+	float: right;
+	display: inline;
+}
 .navigation ul li { 
-    list-style: none;
-   display: inline-block; 
-   width:200px; 
-   height:100px; 
-   border:1px solid; 
-   vertical-align:top; 
-   margin-bottom:5px;
+	list-style: none;
+	display: inline-block; 
+	width:200px; 
+	height:100px; 
+	border:1px solid; 
+	vertical-align:top; 
+	margin-bottom:5px;
     padding:0; margin:0;
     color: #999fb2;
 }
 #left {
 	float: left;
 }
+.clearfix {
+	overflow: auto;
+}
 #center {
 	float: center;
 }
+.clearfix {
+	overflow: auto;
+}
 #right {
 	float: right;
+}
+.clearfix {
+	overflow: auto;
 }
 h1{
 	color: #ffffff;
