--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ header {
 .rightnav {
 	float: right;
 	display: inline;
+	position: absolute;
 }
 .navigation ul li { 
 	list-style: none;
@@ -26,18 +27,22 @@ header {
 }
 #left {
 	float: left;
+	top: 6%;
+	left: 2%;
 }
 .clearfix {
 	overflow: auto;
 }
 #center {
 	float: center;
+	right: 25px;
 }
 .clearfix {
 	overflow: auto;
 }
 #right {
 	float: right;
+	right: 25px;
 }
 .clearfix {
 	overflow: auto;
@@ -58,7 +63,7 @@ h3{
 }
 body{
 	color: #777777;
-	background-image: url("assets/images/vow/vow.png");
+	background-image: url("../images/wov/wov.png");
 	margin: 0;
 	padding: 0;
 	border-color: #dddddd;
@@ -66,22 +71,28 @@ body{
 	font-size: 18px;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
+.container {
+	width: 960px;
+	background-color: #ffffff;
+}
 #self {
 	float: left;
 	clear: right;
 	padding: 10px;
 }
-.container {
-	width: 960px;
+.clearfix {
+    overflow: auto;
 }
 .main-bio {
 	float: left;
     padding: 10px;
+	background-color: #ffffff;
 }
 .portfolio {
 	float: left;
 	width: 620px;
 	padding: 10px;
+	background-color: #ffffff;
 }
 #portfolioimg {
 	padding: 15px;
@@ -89,11 +100,13 @@ body{
 .contactform {
 	float: left; 
 	padding: 10px;
+	background-color: #ffffff;
 }
 
 .sidebar {
 	float: right;
 	width: 270px;
+	background-color: #ffffff;
 }
 .footer {
 	background-color: #666666;
