--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,3 +215,59 @@ input[type=submit] {
 	padding: 10px 30px;
 	cursor: pointer;
 }
+
+/*media queries*/
+@media screen (max-width:980px){
+    .auth-image {
+        float:none;
+        width:100%;
+    }
+    .wrapper {
+		width: 100%;
+		padding: 20px;
+	}
+	.main-content,
+	.sidebar {
+		width: 100%;
+		float: center;
+	}
+}
+
+@media screen (max-width:768px){
+    .main-section {
+        width:100%;
+    }
+
+    .sidebar {
+        max-width: 100%;
+    }
+
+    .auth-image {
+        float:left;
+        width:50%;
+    }
+
+    .main-section {
+        max-width: 100%;
+    }
+}
+
+@media screen and (max-width:640px) {
+
+	#logo {
+		position: center;
+		width: 100%;
+		background: #4aaaa5;
+	}
+	.main-content,
+	.sidebar {
+		width: 100%;
+	}
+	nav {
+		float: none;
+		text-align: center;
+	}
+	nav a{
+		float: none;
+	}
+}
