--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,39 +217,47 @@ input[type=submit] {
 }
 
 /*media queries*/
+
 @media screen (max-width:980px){
     .auth-image {
-        float:none;
+        float: none;
         width:100%;
     }
-    .wrapper {
-		width: 100%;
-		padding: 20px;
-	}
-	.main-content,
+	.container,
 	.sidebar {
+		padding: 50px;
 		width: 100%;
-		float: center;
+		text-align: left;
+		float: left;
 	}
 }
 
-@media screen (max-width:768px){
-    .main-section {
-        width:100%;
-    }
-
-    .sidebar {
-        max-width: 100%;
-    }
-
+@media screen and (max-width:768px){
     .auth-image {
         float:left;
         width:50%;
     }
-
-    .main-section {
+    #main-container {
         max-width: 100%;
+        padding: 30px;
+        padding-top: 100px;
     }
+	.main-content,
+	.sidebar {
+		width: 100%;
+		text-align: left;
+		clear: both;
+	}
+	.sidebar {
+		float: none;
+		max-width: 650px;
+	}
+	nav {
+		text-align: left;
+	}
+	nav a{
+		float: none;
+	}
 }
 
 @media screen and (max-width:640px) {
@@ -262,6 +270,8 @@ input[type=submit] {
 	.main-content,
 	.sidebar {
 		width: 100%;
+		text-align: left;
+		float: left;
 	}
 	nav {
 		float: none;
