--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body{
 	color: #777777;
-	background-image: url("../images/wov/wov.png");
+	background-image: url("../images/wov.png");
 	border-color: #dddddd;
 	background-color: #ffffff;
 	font-size: 18px;
